syntax = "proto3";

import "db_task.proto";

option go_package = "./dbpb/;dbpb";

message DBClusterResponseStatus {
    int32 code = 1;
    string message = 2;
}

message DBClusterDTO {
    string id = 1;
    string code = 2;
    string name = 3;
    string tenantId = 4;
    string dbPassword = 5;
    string clusterType = 6;
    string versionCode = 7;
    int32 status = 8;
    string tags = 9;
    bool tls = 10;
    string demands = 11;
    bool exclusive = 12;
    string region = 13;
    string cpuArchitecture = 14;
    int32 workFlowId = 15;
    string ownerId = 16;
    int64 createTime = 17;
    int64 updateTime = 18;
    int64 deleteTime = 19;
}

message DBTopologyConfigDTO {
    int32 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    string content = 4;
    int64 createTime = 5;
}

message DBCreateClusterRequest {
    DBClusterDTO cluster = 1;
}

message DBCreateClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBLoadClusterRequest {
    string clusterId = 1;
}

message DBLoadClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDetailDTO clusterDetail = 2;
}

message DBClusterDisplayDTO {
    DBClusterDTO cluster = 1;
    DBFlowDTO flow = 2;
}

message DBClusterDetailDTO {
    DBClusterDTO cluster = 1;
    DBTopologyConfigDTO topologyConfigRecord = 2;
    DBFlowDTO flow = 3;
    repeated DBComponentInstanceDTO componentInstances = 4;
}

message DBListClusterRequest {
    DBPageDTO pageReq = 1;
    string clusterId = 2;
    string clusterName = 3;
    string clusterType = 4;
    string clusterStatus = 5;
    string clusterTag = 6;
}

message DBListClusterResponse {
    DBClusterResponseStatus status = 1;
    repeated DBClusterDetailDTO clusters = 2;
    DBPageDTO page = 3;

}

message DBDeleteClusterRequest {
    string clusterId = 1;
}

message DBDeleteClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateClusterStatusRequest {
    string clusterId = 1;
    int32 status = 2;
    bool updateStatus = 3;
    int64 flowId = 4;
    bool updateFlow = 5;
}

message DBUpdateClusterStatusResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateDemandRequest {
    string clusterId = 1;
    string demands = 2;
    string tenantId = 3;
}

message DBUpdateDemandResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateClusterInfoRequest {
    string clusterId = 1;
    string name = 2;
    string clusterType = 3;
    string versionCode = 4;
    string tags = 5;
    bool tls = 6;
}

message DBUpdateClusterInfoResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBCreateInstanceRequest {
    string clusterId = 1;
    string tenantId = 2;
    repeated DBComponentInstanceDTO componentInstances = 3;
}

message DBCreateInstanceResponse {
    DBClusterResponseStatus status = 1;
    repeated DBComponentInstanceDTO componentInstances = 2;
}

message DBDeleteInstanceRequest {
    string id = 1;
}

message DBDeleteInstanceResponse {
    DBClusterResponseStatus status = 1;
}

message DBUpdateTopologyConfigRequest {
    string clusterId = 1;
    string content = 2;
    string tenantId = 3;
}

message DBUpdateTopologyConfigResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
    DBTopologyConfigDTO topologyConfigRecord = 3;
}

message DBPageDTO {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
}

message DBParameterRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 createTime = 4;
    string operatorId = 5;
    string content = 6;
    int64 flowId = 7;
}

message DBSaveParametersRequest {
    DBParameterRecordDTO parameters = 1;
}

message DBSaveParametersResponse {
    DBClusterResponseStatus status = 1;
    DBParameterRecordDTO parameters = 2;
}

message DBGetCurrentParametersRequest {
    string clusterId = 1;
}

message DBGetCurrentParametersResponse {
    DBClusterResponseStatus status = 1;
    DBParameterRecordDTO parameters = 2;
}

message DBBackupRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 startTime = 4;
    int64 endTime = 5;
    string backupMethod = 6;
    string backupType = 7;
    string backupMode = 8;
    string storageType = 9;
    string operatorId = 10;
    string filePath = 11;
    int64 flowId = 12;
    uint64 size = 13;
    uint64 backupTso = 14;
}

message DBSaveBackupRecordRequest {
    DBBackupRecordDTO backupRecord = 1;
}

message DBSaveBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBBackupRecordDTO backupRecord = 2;
}

message DBUpdateBackupRecordRequest {
    DBBackupRecordDTO backupRecord = 1;
}

message DBUpdateBackupRecordResponse {
    DBClusterResponseStatus status = 1;
}

message DBDeleteBackupRecordRequest {
    int64 id = 1;
}

message DBDeleteBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBBackupRecordDTO backupRecord = 2;
}

message DBListBackupRecordsRequest {
    string clusterId = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    string backupMode = 4;
    DBPageDTO page = 5;
}

message DBDBBackupRecordDisplayDTO {
    DBBackupRecordDTO backupRecord = 1;
    DBFlowDTO flow = 2;
}

message DBListBackupRecordsResponse {
    DBClusterResponseStatus status = 1;
    repeated DBDBBackupRecordDisplayDTO backupRecords = 2;
    DBPageDTO page = 3;
}

message DBQueryBackupRecordRequest {
    string clusterId = 1;
    int64 recordId = 2;
}

message DBQueryBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBDBBackupRecordDisplayDTO backupRecords = 2;
}

message DBRecoverRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 createTime = 4;
    string operatorId = 5;
    int64 backupRecordId = 6;
    int64 flowId = 7;
}

message DBSaveRecoverRecordRequest {
    DBRecoverRecordDTO recoverRecord = 1;
}

message DBSaveRecoverRecordResponse {
    DBClusterResponseStatus status = 1;
    DBRecoverRecordDTO recoverRecord = 2;
}

message DBBackupStrategyDTO {
    int64 id = 1;
    string tenantId = 2;
    string operatorId = 3;
    string clusterId = 4;
    string backupDate = 5;
    uint32 startHour = 6;
    uint32 endHour = 7;
    int64 createTime = 8;
    int64 updateTime = 9;
}

message DBSaveBackupStrategyRequest {
    DBBackupStrategyDTO strategy = 1;
}

message DBSaveBackupStrategyResponse {
    DBClusterResponseStatus status = 1;
    DBBackupStrategyDTO strategy = 2;
}

message DBQueryBackupStrategyRequest {
    string clusterId = 1;
}

message DBQueryBackupStrategyResponse {
    DBClusterResponseStatus status = 1;
    DBBackupStrategyDTO strategy = 2;
}

message DBQueryBackupStrategyByTimeRequest {
    string weekday = 1;
    uint32 startHour = 2;
}

message DBQueryBackupStrategyByTimeResponse {
    DBClusterResponseStatus status = 1;
    repeated DBBackupStrategyDTO strategys = 2;
}

message DBComponentInstanceDTO {
    string id = 1;
    string code = 2;
    string tenantId = 3;
    int32 status = 4;

    string clusterId = 5;
    string componentType = 6;
    string role = 7;
    string version = 8;

    string hostId = 9;
    string host = 10;
    int32 cpuCores = 11;
    int32 memory = 12;
    string diskId = 13;
    string diskPath = 14;
    string portInfo = 15;
    string allocRequestId = 16;

    int64 createTime = 17;
    int64 updateTime = 18;
    int64 deleteTime = 19;
}